removing white space on bottom of page in firefox, and fixing techs button

--- a/src/stylesheets/ProfessionalPage.css
+++ b/src/stylesheets/ProfessionalPage.css
@@ -1,7 +1,3 @@
-.ProfessionalPage {
-    margin: 50px;
-}
-
 .margin-top {
     margin-top: 100px;
 }
